refactor: Add default panel, checkpoint 8
- Add default panel with faded logo background.
- Add icons to package filters.

--- a/gui/css/base.css
+++ b/gui/css/base.css
@@ -1,7 +1,7 @@
 .app {
 	display: flex;
 	flex-flow: column nowrap;
-	background: #f7f6f8;
+	/*background: #f7f6f8;*/
 	width: 100%;
 	min-width: 700px;
 	height: 100%;
