--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -11,6 +11,7 @@
 @import "../css/components/settings.css";
 @import "../css/components/about.css";
 @import "../css/components/update.css";
+@import "../css/components/default.css";
 @import "../css/interfaces.css";
 @import "../css/retina.css";
 @import "../css/classes.css";
