--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -10,6 +10,7 @@
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
 		<link href="../css/main.css" rel="stylesheet" />
+		<script src="../js/libs/fastclick.js"></script>
 		<script src="../js/libs/interaction.js"></script>
 		<script src="../js/libs/funnel.js"></script>
 		<script async defer src="../js/app.js"></script>
@@ -98,8 +99,12 @@
 					<div class="entries">
 						<div class="item">
 							<div class="left">
-								<div class="icon"></div>
-								<div class="label">Installed</div>
+								<div class="center">
+									<div class="icon-cont">
+										<i class="fas fa-download"></i>
+									</div>
+									<div class="label">Installed</div>
+								</div>
 							</div>
 							<div class="right">
 								<div class="count">14</div>
@@ -107,8 +112,12 @@
 						</div>
 						<div class="item">
 							<div class="left">
-								<div class="icon"></div>
-								<div class="label">Outdated</div>
+								<div class="center">
+									<div class="icon-cont">
+										<i class="fas fa-history"></i>
+									</div>
+									<div class="label">Outdated</div>
+								</div>
 							</div>
 							<div class="right">
 								<div class="count">1</div>
@@ -116,8 +125,14 @@
 						</div>
 						<div class="item">
 							<div class="left">
-								<div class="icon"></div>
-								<div class="label">Available</div>
+								<div class="center">
+									<div class="icon-cont">
+										<i
+											class="fas fa-cloud-download-alt"
+										></i>
+									</div>
+									<div class="label">Available</div>
+								</div>
 							</div>
 							<div class="right">
 								<div class="count">1230</div>
@@ -180,6 +195,24 @@
 				</div>
 
 				<div id="content" class="content">
+					<div id="default-cont" class="default-cont">
+						<div class="logo-cont">
+							<div class="top-face-cont">
+								<div class="top-face">
+									<div class="top-face-text">
+										$<span>_</span>
+									</div>
+								</div>
+							</div>
+							<div class="left-face"></div>
+							<div class="right-face">
+								<div class="right-face-text">
+									tab
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div id="settings-cont" class="settings-cont none">
 						<div class="settings-inner">
 							<div class="entry">
@@ -319,7 +352,7 @@
 						</div>
 					</div>
 
-					<div id="packages-cont" class="packages-cont">
+					<div id="packages-cont" class="packages-cont none">
 						<div id="pkg-list" class="pkg-list">
 							<div class="sticky-cont">
 								<div id="header-cont" class="header-cont">
@@ -370,286 +403,8 @@
 										</div>
 									</div>
 									<div class="right">
-										<div
-											id="search-spinner"
-											class="spinner none"
-										>
-											<svg
-												xmlns="http://www.w3.org/2000/svg"
-												xmlns:xlink="http://www.w3.org/1999/xlink"
-												style="
-													margin: auto;
-													background: rgba(
-														255,
-														255,
-														255,
-														0
-													);
-													display: block;
-												"
-												width="50px"
-												height="50px"
-												viewBox="0 0 100 100"
-												preserveAspectRatio="xMidYMid"
-											>
-												<g transform="rotate(0 50 50)">
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.9166666666666666s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g transform="rotate(30 50 50)">
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.8333333333333334s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g transform="rotate(60 50 50)">
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.75s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g transform="rotate(90 50 50)">
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.6666666666666666s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(120 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.5833333333333334s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(150 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.5s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(180 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.4166666666666667s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(210 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.3333333333333333s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(240 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.25s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(270 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.16666666666666666s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(300 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="-0.08333333333333333s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-												<g
-													transform="rotate(330 50 50)"
-												>
-													<rect
-														x="47"
-														y="27"
-														rx="1.8"
-														ry="1.8"
-														width="6"
-														height="12"
-														fill="#999999"
-													>
-														<animate
-															attributeName="opacity"
-															values="1;0"
-															keyTimes="0;1"
-															dur="1s"
-															begin="0s"
-															repeatCount="indefinite"
-														></animate>
-													</rect>
-												</g>
-											</svg>
-										</div>
+										<!-- prettier-ignore -->
+										<div id="search-spinner" class="spinner none" > <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" margin: auto; background: rgba( 255, 255, 255, 0 ); display: block; " width="50px" height="50px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" > <g transform="rotate(0 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.9166666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(30 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.8333333333333334s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(60 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.75s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(90 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.6666666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(120 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.5833333333333334s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(150 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.5s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(180 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.4166666666666667s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(210 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.3333333333333333s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(240 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.25s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(270 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.16666666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(300 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.08333333333333333s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(330 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite" ></animate> </rect> </g> </svg></div>
 
 										<div
 											id="search-loader"
@@ -763,8 +518,20 @@
 						<div class="top-cont">
 							<div class="left"></div>
 							<div class="right">
-								<div class="btn-w btn-update">Clear Log</div>
-								<div class="btn-b btn-update-b">Update</div>
+								<div
+									id="update-clear"
+									class="btn btn-w btn-update"
+									data-action="clear"
+								>
+									Clear Log
+								</div>
+								<div
+									id="update-update"
+									class="btn btn-b btn-update-b"
+									data-action="update"
+								>
+									Update
+								</div>
 							</div>
 						</div>
 						<div class="bottom-cont">
@@ -776,16 +543,32 @@
 
 					<div id="doctor-cont" class="update-cont none">
 						<div class="top-cont">
-							<div class="left"></div>
+							<div class="left">
+								<!-- prettier-ignore -->
+								<div id="doctor-spinner" class="none" > <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style=" margin: auto; background: rgba( 255, 255, 255, 0 ); display: block; " width="50px" height="50px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" > <g transform="rotate(0 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.9166666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(30 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.8333333333333334s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(60 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.75s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(90 50 50)"> <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.6666666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(120 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.5833333333333334s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(150 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.5s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(180 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.4166666666666667s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(210 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.3333333333333333s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(240 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.25s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(270 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.16666666666666666s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(300 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="-0.08333333333333333s" repeatCount="indefinite" ></animate> </rect> </g> <g transform="rotate(330 50 50)" > <rect x="47" y="27" rx="1.8" ry="1.8" width="6" height="12" fill="#999999" > <animate attributeName="opacity" values="1;0" keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite" ></animate> </rect> </g> </svg></div>
+							</div>
 							<div class="right">
-								<div class="btn-w btn-update">Clear Log</div>
-								<div class="btn-b btn-update-b">Run</div>
+								<div
+									id="doctor-clear"
+									class="btn btn-w btn-update"
+									data-action="clear"
+								>
+									Clear Log
+								</div>
+								<div
+									id="doctor-run"
+									class="btn btn-b btn-update-b"
+									data-action="run"
+								>
+									Run
+								</div>
 							</div>
 						</div>
 						<div class="bottom-cont">
-							<div id="doctor-output" class="update-output">
-								Doctor results:
-							</div>
+							<div
+								id="doctor-output"
+								class="update-output select"
+							></div>
 						</div>
 					</div>
 				</div>
