--- a/gui/css/components/packages.css
+++ b/gui/css/components/packages.css
@@ -118,6 +118,12 @@
 	flex-flow: column nowrap;
 }
 
+.packages-cont .pkg-list .label {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .packages-cont .header-cont {
 	position: -webkit-sticky;
 	position: sticky !important;
@@ -378,6 +384,7 @@
 
 .packages-cont .checkmark {
 	border: 1px solid #cacaca;
+	border: 1px solid rgba(0, 0, 0, 0.2);
 	border-radius: 3px;
 	padding: 2px;
 	background: white;
