update: Change main packages pane name to packages-installed

--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -79,7 +79,7 @@
 				<div id="sidebar" class="sidebar">
 					<div class="section">Registry</div>
 
-					<div class="row" data-row="packages">
+					<div class="row" data-row="packages-installed">
 						<div class="left">
 							<div class="center">
 								<div class="icon-cont">
@@ -348,7 +348,7 @@
 						</div>
 					</div>
 
-					<div id="packages-cont" class="packages-cont none">
+					<div id="packages-installed-cont" class="packages-installed-cont none">
 						<div class="pkg-section">
 							<div class="sticky-cont">
 								<div class="pkg-toolbar">
