update: Hide sidebar counters by default

--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -94,7 +94,7 @@
 								<div class="loader-cont none">
 									<div class="svg-loader s-loader"></div>
 								</div>
-								<div class="count">1</div>
+								<div class="count none">1</div>
 							</div>
 						</div>
 					</div>
@@ -114,7 +114,7 @@
 								<div class="loader-cont none">
 									<div class="svg-loader s-loader"></div>
 								</div>
-								<div class="count">10</div>
+								<div class="count none">10</div>
 							</div>
 						</div>
 					</div>
@@ -134,7 +134,7 @@
 								<div class="loader-cont none">
 									<div class="svg-loader s-s-loader"></div>
 								</div>
-								<div class="count">100</div>
+								<div class="count none">100</div>
 							</div>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 								</div>
 							</div>
 							<div class="right">
-								<div class="count">14</div>
+								<div class="count none">14</div>
 							</div>
 						</div>
 						<div class="item">
@@ -163,7 +163,7 @@
 								</div>
 							</div>
 							<div class="right">
-								<div class="count">1</div>
+								<div class="count none">1</div>
 							</div>
 						</div>
 						<div class="item">
@@ -176,7 +176,7 @@
 								</div>
 							</div>
 							<div class="right">
-								<div class="count">1230</div>
+								<div class="count none">1230</div>
 							</div>
 						</div>
 					</div> -->
